chore: added working apply in conjuction with map-command-api.

--- a/example/managed-environment.yaml
+++ b/example/managed-environment.yaml
@@ -7,5 +7,9 @@
   "name": "ManagedEnvironment",
   "resource_version": "d1c1d253-400b-4414-bb5f-7f101913f759"
  },
- "spec": {}
+ "spec": {
+   "azure_owner_group": "abc",
+   "slack_channel_plattform_notification_email": "slack@slack.slack",
+   "team_domain": "map"
+ }
 }
